--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="style.css" rel="stylesheet" media="all"> </head>
 <body>
-    <a href="/Dictionary/index.html">Dictionary</a>
+    <a href="/dictionary/index.html">Dictionary</a>
 </body>
