--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
     <link href="style.css" rel="stylesheet" media="all"> </head>
 <body>
     <a href="/dictionary/index.html">Dictionary</a>
+    <a href="/laughofeliza/index.html">Laugh of ELiza</a>
 </body>
