--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="style.css" rel="stylesheet" media="all"> </head>
+
 <body>
-    <a href="/dictionary/index.html">Dictionary</a>
-    <a href="/laughofeliza/index.html">Laugh of ELiza</a>
+    <li>
+        <ul><a href="/dictionary/index.html">Dictionary</a></ul>
+        <ul><a href="/laughofeliza/index.html">Laugh of Eliza</a></ul>
+    </li>
 </body>
