--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="style.css" rel="stylesheet" media="all"> </head>
 
 <body>
-    <li>
-        <ul><a href="/dictionary/index.html">Dictionary</a></ul>
-        <ul><a href="/laughofeliza/index.html">Laugh of Eliza</a></ul>
-    </li>
+    <ul>
+        <li><a href="/dictionary/index.html">Dictionary</a></li>
+        <li><a href="/laughofeliza/index.html">Laugh of Eliza</a></li>
+    </ul>
 </body>
