--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <ul>
-        <li><a href="/dictionary/index.html">Dictionary</a></li>
+        <li><a href="/dictionary/">Dictionary</a></li>
         <li><a href="/laughofeliza/index.html">Laugh of Eliza</a></li>
     </ul>
 </body>
