--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <ul>
         <li><a href="/dictionary/">Dictionary</a></li>
-        <li><a href="/laughofeliza/index.html">Laugh of Eliza</a></li>
+        <li><a href="/postcards/">Postcards</a></li>
+        <li><a href="/laughofeliza/">Laugh of Eliza</a></li>
     </ul>
 </body>
