--- a/postcards/index.html
+++ b/postcards/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="titlebox"> <img class="map" src="s/PFBmap.png">
+    <div class="titlebox"> <img class="map" src="/s/PFBmap.png">
         <div class="title">Postcards
             <br>From
             <br>Berlin<span class="author"> by Bec Miles</span></div>
