--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/index.html
@@ -11,5 +11,6 @@
         <li><a href="/hope/">Hope</a></li>
         <li><a href="/postcards/">Postcards</a></li>
         <li><a href="/laughofeliza/">Laugh of Eliza</a></li>
+        <li><a href="/homepage/">Homepage</a></li>
     </ul>
 </body>
