--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/homepage/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/homepage/index.html
@@ -2,8 +2,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Front Page</title>
     <meta name="description" content="">
+    <!-- Mobile-friendly viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Style sheet link -->
     <link href="style.css" rel="stylesheet" media="all"> </head>
 
 <body>
