--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/dictionary/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/dictionary/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Dictionary</title>
     <meta name="description" content="">
     <!-- Mobile-friendly viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
