--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/postcards/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/postcards/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Postcards from Berlin</title>
     <meta name="description" content="">
     <link href="style.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
