--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
+<title>rw staging area</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
