--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/thumbs/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/thumbs/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet" media="all"> </head>
 
 <body>
-    <svg>
+    <svg class="filter">
         <filter id="redfilter">
             <feColorMatrix type="matrix" values="1 0 0 0 3
               0 0 0 0 0
