--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <ul>
+        <li><a href="demo/">Demo</a></li>
         <li><a href="dictionary/">Dictionary</a></li>
         <li><a href="hope/">Hope</a></li>
         <li><a href="postcards/">Postcards</a></li>
