--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/demo/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/demo/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet" media="all"> </head>
 
 <body>
-    <iframe id="frame" src="https://www.seameditions.com" width="100%" height="100%" frameborder="0" allowfullscreen>
+    <iframe id="frame" src="https://www.seameditions.com/thumbs-in-space" width="100%" height="100%" frameborder="0" allowfullscreen>
     </iframe>
 </body>
 
