--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/index.html
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="titlebox">
-        <div class="titleimage"> <img src="/s/12.png" /> </div>
+        <div class="titleimage"> <img src="s/12.png" /> </div>
         <div class="title">K<span class="a">a</span>fk<span class="a">a</span><span class="e">e</span>squ<span class="e">e</span></div>
         <div class="author">H<span class="a">a</span>rry D<span class="e">e</span>nniston</div>
         <div class="illustrator">illustrations by Rosie Wassername</div>
