--- a/againstsilence/index.html
+++ b/againstsilence/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="main">
-        <div class="hbg"> <img src="/s/title.png" / alt="Against Silence, by Fern Richards"> </div>
+        <div class="hbg"> <img src="/s/AgainstSilenceTitle.png" / alt="Against Silence, by Fern Richards"> </div>
         <div class="column"></div>
         <p class="blockquote reference first"><span class="reftext bq">Randa K Dubnick, <em>The Structure of Obscurity: Gertrude Stein, Language and Cubism</em>, (Urbana and Chicago: University of Illinois Press, 1983) p. 43</span><span class="mobref bq" id="r1"><a href="#f1">1</a></span>Ironically Stein’s intention in writing <em>Tender Buttons</em> was to capture immediate experience as consciousness grapples with it; but there have been many problems in reading the book. One difficulty caused by the text is the disjunction of the two axes of language, which makes it almost impossible to read the work for conventional discursive content. This problem leads to yet another problem: the effort of trying to figure out or reconstruct the content not only exhausts readers but overdistances them from the work itself. Such effort is futile anyway, for <em>Tender Buttons</em> demands to be dealt with on its own terms.</p>
         <p class="blockquote" style="text-align:right;padding-right:5px;">(Randa Dubnick, <em>The Structure of Obscurity: Gertrude Stein, Language and Cubism</em>.)</p>
