--- a/againstsilence/index.html
+++ b/againstsilence/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="/"><div id="seamhome"><img src="seamicon.png" /></div></a>
+    <a href="/"><div id="seamhome"><img src="/s/seamicon.png" /></div></a>
     <div id="main">
         <div class="hbg"> <img src="/s/AgainstSilenceTitle.png" / alt="Against Silence, by Fern Richards"> </div>
         <div class="column"></div>
