--- a/againstsilence/index.html
+++ b/againstsilence/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <link href="normalize.css" rel="stylesheet" media="all">
     <link href="style.css" rel="stylesheet" media="all">
-    <link href="seamhome.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
 </head>
 
 <body>
