--- a/againstsilence/index.html
+++ b/againstsilence/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Against Silence</title>
     <meta name="description" content="">
-    <link href="normalize.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
     <link href="style.css" rel="stylesheet" media="all">
     <link href="/seamhome.css" rel="stylesheet" media="all">
 </head>
