--- a/thenightingalesnest/index.html
+++ b/thenightingalesnest/index.html
@@ -2,11 +2,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>The Nightingales Nest</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link href="/normalize.css" rel="stylesheet" media="all">
     <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
     <link href="/seamhome.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
