--- a/livingoutsidetheframe/index.html
+++ b/livingoutsidetheframe/index.html
@@ -3,9 +3,13 @@
     <title>Page Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link href="style.css" rel="stylesheet" media="all"> </head>
+    <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
+</head>
 
 <body>
+    <a href="/"><div id="seamhome"><img src="/s/seamicon.png" /></div></a>
     <div id="titlebox">
         <div class="title">Living Outside the Frame: Poetry and Photographs <span><br>by Lewis Buxton</span></div>
     </div>
@@ -17,26 +21,28 @@
             <p class="quote">the [conflict] between music and image. The phrase that sounds perfect to your ear may not evoke the image in your mind’s eye.</p>
             <p>The music here is not literal music, it is the sound, the weight, the lyricism of the words employed which extrapolate outward from the image. When you write from a photograph you are telling the story behind it: a photograph is still, but a story or poem moves, the details shift. The language a writer uses must be at once specific to the image and able to move beyond the story, outside the frame. The poem I first wrote about this beach tried too hard to be beautiful and plant the right image in the reader’s head: <em>‘the brown sugar of the shore’</em> or <em>‘that fragment of October’</em> or <em>‘sand that has browned like tea bags from the weight of the sea’</em>. These phrases don’t sound bad but they just describe the scene, they do not go to the music, the story, the movement beyond the static image. So how as a writer do you overcome the discord between music and image? It’s a matter of focusing the lens. The first attempts are fuzzy and blurred, or they are off kilter, only capturing a corner of that original photo. I needed to find a clearer view point for my poem. And there had to be some ekphrasis, some movement between art forms, a new perspective or focus of the poem that differed from the photograph. Because otherwise what’s the point of the poem? What does it add to the world that the photograph didn’t already provide?</p>
             <p>Sometimes the photograph should be left alone. By extension there are some things, some moments in life that should be left alone, shouldn’t be interrupted by the tannoy system in my head whispering <em>‘take notes’</em>. This is not that first poem I wrote. That first poem had far too much description and not enough music.</p>
-            <div class="quote"><span class="poemtitle">AT LOUISA BAY</span><div>
-                <br>The cushioned heels of a morning jogger
-                <br>push the embers of last night’s bonfire
-                <br>deeper into the sand, the charred black
-                <br>
-                <br>driftwood, edged in white ash
-                <br>crumbles when touched. The fag butts
-                <br>are curled like sleeping dogs at the bottom
-                <br>
-                <br>of the fire pit and the ring pulls from beer cans
-                <br>shine in the dull morning. Last night
-                <br>you and I stripped off our shoes and socks
-                <br>
-                <br>baptised our feet in the October tide
-                <br>returned home with the sin of sand
-                <br>still clinging to our soles. You’re asleep now
-                <br>
-                <br>wood smoke hugging your lungs and clothes
-                <br>
-                <br></div> </div>
+            <div class="quote"><span class="poemtitle">AT LOUISA BAY</span>
+                <div>
+                    <br>The cushioned heels of a morning jogger
+                    <br>push the embers of last night’s bonfire
+                    <br>deeper into the sand, the charred black
+                    <br>
+                    <br>driftwood, edged in white ash
+                    <br>crumbles when touched. The fag butts
+                    <br>are curled like sleeping dogs at the bottom
+                    <br>
+                    <br>of the fire pit and the ring pulls from beer cans
+                    <br>shine in the dull morning. Last night
+                    <br>you and I stripped off our shoes and socks
+                    <br>
+                    <br>baptised our feet in the October tide
+                    <br>returned home with the sin of sand
+                    <br>still clinging to our soles. You’re asleep now
+                    <br>
+                    <br>wood smoke hugging your lungs and clothes
+                    <br>
+                    <br></div>
+            </div>
             <p class="first">8 years later I am back on a beach, this time the Norfolk coast, and my friend Cadi is taking photographs. I wish I could write poems the way Cadi takes photographs. She seems to step back and for a moment be objective, takes her time with the thing she is focusing on - the lobster creels, the skeleton of a boat, the outline of our mate Tom’s head - takes the photograph and then moves on with her life. It is never intrusive to the subject; often you don’t know she’s taking the photograph. More importantly it never feels like Cadi is going out of her way to make art. The art comes as a natural extension of her. As we walk she takes photographs almost literally in her stride.</p>
             <p>The Norfolk coast is beautiful, muddy and flat: it makes you feel astonishingly calm, other than the occasional lunatic flight of sparrows, or the determined gallop of a Labrador. You can see so much of the world, unobstructed by hills or buildings, see people miles away, the shadow puppet of a hand waving from the horizon. I keep thinking <em>‘this would be make a good poem, I should write about this, try and remember it all’</em> whereas Cadi and her camera just seem to be naturally picking things up, capturing them, and then gets straight back on with walking. I think of Helen Mort in her poem <em>Take Notes</em>:</p>
             <p class="quote"> You pointed to each lit window in town.
