--- a/livingoutsidetheframe/index.html
+++ b/livingoutsidetheframe/index.html
@@ -14,7 +14,7 @@
         <div class="title">Living Outside the Frame: Poetry and Photographs <span><br>by Lewis Buxton</span></div>
     </div>
     <div id="main">
-        <div class="photo p1"><img src="s/LOTF1.png"></div>
+        <div class="photo p1"><img src="/s/LOTF1.png"></div>
         <div id="essay">
             <p class="first">One of the first poems I wrote was about a photograph. It was taken on holiday when my friends and I went to stay on the Kent coast: teenagers with dyed hair, newly pierced ears and in my case heavy acne. In the photograph we shiver round a pile of tight jeans, towels and tasseled scarves. I’ve been writing about beaches ever since. They are a liminal space, caught between being touched by sea and being called land. These photographs catch that sense of being blurred between two states of belonging; a hazy photograph of adolescents running away from the determined, concrete city to get drunk in the sand between childhood and university.</p>
             <p>There is a difference between writing from a photograph and writing about one: writing from a photograph means extrapolating outward from a moment, beyond its frame, rather than writing about a photograph which is just describing what is happening, being hemmed in by the borders of the camera lens. In his essay ‘On Poetry and Conflict’, poet and essayist Michael Symmons Roberts notes</p>
