--- a/anenglishtowelshdictionaryoffeministterms/index.html
+++ b/anenglishtowelshdictionaryoffeministterms/index.html
@@ -6,9 +6,15 @@
     <title>Page Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" media="all"> </head>
+    <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
+</head>
 
 <body>
+    <a href="/">
+        <div id="seamhome"><img src="/s/seamicon.png" /></div>
+    </a>
     <div id="main">
         <div id="title">
             <img class="logo" src="/s/FDSymbol.svg" />
