--- a/thumbsinspace/index.html
+++ b/thumbsinspace/index.html
@@ -1,11 +1,17 @@
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Thumbs In Space</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" media="all"> </head>
+    <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
+</head>
 
 <body>
+    <a href="/">
+        <div id="seamhome"><img src="/s/seamicon.png" /></div>
+    </a>
     <div id="titlebox">
         <svg class="filter">
             <filter id="redfilter">
