--- a/byluckoftheharbour/index.html
+++ b/byluckoftheharbour/index.html
@@ -2,15 +2,20 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BLOTH</title>
+    <title>By Luck of the Harbour</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
+    <a href="/">
+        <div id="seamhome"><img src="/s/seamicon.png" /></div>
+    </a>
     <div id="titlebox"><img src="/s/BLOTHSappho.jpg" /></div>
     <div id="essaybox">
         <div class="titletext"><span class="author">ali graham</span><br><span class="title">]by lUck oF the haRbour:</span><br><span class="subtitle">gender and the flow of history in the renaissance’s revival of sappho</span></div>
