--- a/deadoneiricmonsters/index.html
+++ b/deadoneiricmonsters/index.html
@@ -2,16 +2,21 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Dead Oneiric Monsters</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
     <div id="ratiomodal" class="bodytext"><em>Dead Oneiric Monsters</em> is best viewed in landscape: please rotate your device.</div>
+    <a href="/">
+        <div id="seamhome"><img src="/s/seamicon.png" /></div>
+    </a>
     <div id="main">
         <div id="title" class="bodytext">
             <div class="title">DEAD ONEIRIC MONSTERS/ <span class="author"> /SCOTT MASON</span></div>
@@ -196,7 +201,7 @@
         <div id="essay">
             <div class="essay bodytext essaytext"><span class="poemanchor1"></span>
                 <div class="quote indent">We go to the cinema in order to suspend for a moment our usual modes of communication.<br>
-                <span class="quotesource">—Felix Guattari</span></div>
+                    <span class="quotesource">—Felix Guattari</span></div>
                 <div>A political battle has unfolded and continues to unfold around cinema for control of the effects of subjectivation and desubjectivation that the “non-human” semiotics of the cinematographic image produce on the individuated subject. The three preverbal senses of self, the sense of a verbal self, and semiotics (at once asignifying, symbolic, and signifying) are mobilized by cinematographic machinism which by deterritorializing the image and perception (the “film-eye”) risks undoing, in its way, the unity of the subject. </div>
                 <div>With the cinema, we have a textbook case of how the signifying machine comes to neutralize, order, and normalize the action of symbolic and asignifying semiotics which exceed dominant significations. By hierarchizing the latter through signifying semiotics, the film industry functions like group psychoanalysis, powerfully aiding in the construction of the roles and functions and, especially, in the fabrication of the individuated subject and his unconscious.</div>
                 <div>Guattari lists precisely the semiotics at work in the cinema:</div>
