--- a/leftalone/index.html
+++ b/leftalone/index.html
@@ -7,11 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link href="normalize.css" rel="stylesheet" media="all">
     <link href="style.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
+    <a href="/"><div id="seamhome"><img src="/s/seamicon.png" /></div></a>
     <div id="frame">
         <video autoplay playsinline loop muted>
     <source src="/s/LAfinal.webm" type='video/webm; codecs="vp8, vorbis"' />
