--- a/christmasafterbrexit/index.html
+++ b/christmasafterbrexit/index.html
@@ -5,13 +5,15 @@
     <title>Christmas After Brexit</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link href="normalize.css" rel="stylesheet" media="all">
+    <link href="/normalize.css" rel="stylesheet" media="all">
+    <link href="/seamhome.css" rel="stylesheet" media="all">
     <link href="style.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
+    <a href="/"><div id="seamhome"><img src="/s/seamicon.png" /></div></a>
     <div class="titlebox">
         <span class="author">Michael Askew</span><br/>
         <span class="title">Christmas After Brexit</span>
