--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <!--<div class="preloader"><img src="/s/icon.png" /></div>-->
     <div id="containergrid">
+        <div class="logocover"></div>
         <div class="logo"><img src="/s/Logo_transparent.png" /></div>
         <div class="impressum">
             <p>Seam Editions was a creative-critical publishing project based variously in Norwich, London, and Reading.</p>
@@ -23,66 +24,102 @@
         </div>
         <div class="menuscroller">
             <div class="menuitem spacer"></div>
-            <a href="/christmasafterbrexit"><div class="menuitem christmasafterbrexit">
-                <div class="title">Christmas After Brexit</div>
-                <div class="author">Michael Askew</div>
-            </div></a>
-            <a href="/againstsilence"><div class="menuitem againstsilence">
-                <div class="title">AGAINST SILENCE</div>
-                <div class="author">Fern Broome Richards</div>
-            </div></a>
-            <a href="/leftalone"><div class="menuitem leftalone">
-                <div class="title">Left Alone</div>
-                <div class="author">Jake Reynolds</div>
-            </div></a>
-            <a href="/thenightingalesnest"><div class="menuitem thenightingalesnest">
-                <div class="title">The Nightingales Nest</div>
-                <div class="author">Richard Lambert</div>
-            </div></a>
-            <a href="/thelaughofeliza"><div class="menuitem thelaughofeliza">
-                <div class="title">The Laugh of Eliza</div>
-                <div class="author">Leah Foster</div>
-            </div></a>
-            <a href="/livingoutsidetheframe"><div class="menuitem livingoutsidetheframe">
-                <div class="title">Living Outside the Frame</div>
-                <div class="author">Lewis Buxton</div>
-            </div></a>
-            <a href="/ahopeonthewall"><div class="menuitem ahopeonthewall">
-                <div class="title">A Hope on the Wall</div>
-                <div class="author">Anna Metcalfe</div>
-            </div></a>
-            <a href="/postcardsfromberlin"><div class="menuitem postcardsfromberlin">
-                <div class="title">Postcards From Berlin</div>
-                <div class="author">Bec Miles</div>
-            </div></a>
-            <a href="/thejudepoems"><div class="menuitem thejudepoems">
-                <div class="title">THE JUDE POEMS</div>
-                <div class="author">Matthew Halliday</div>
-            </div></a>
-            <a href="/anenglishtowelshdictionaryoffeministterms"><div class="menuitem anenglishtowelshdictionaryoffeministterms">
-                <div class="title">An English to Welsh Dictionary of Feminist Terms</div>
-                <div class="author">Sarah Hudis</div>
-            </div></a>
-            <a href="/thumbsinspace"><div class="menuitem thumbsinspace">
-                <div class="title">Thumbs in Space</div>
-                <div class="author">Seabright D. Mortimer</div>
-            </div></a>
-            <a href="/kafkaesque"><div class="menuitem kafkaesque">
-                <div class="title">Kafkaesque</div>
-                <div class="author">Harry Denniston</div>
-            </div></a>
-            <a href="/reflector"><div class="menuitem reflector">
-                <div class="title">REFLECTOR</div>
-                <div class="author">Nina Ines Ward</div>
-            </div></a>
-            <a href="/deadoneiricmonsters"><div class="menuitem deadoneiricmonsters">
-                <div class="title">DEAD ONEIRIC MONSTERS</div>
-                <div class="author">Scott Mason</div>
-            </div></a>
-            <a href="/byluckoftheharbour"><div class="menuitem byluckoftheharbour">
-                <div class="title">]]by lUck oF the haRbour</div>
-                <div class="author">Ali Graham</div>
-            </div></a>
+            <a href="/christmasafterbrexit">
+                <div class="menuitem christmasafterbrexit">
+                    <div class="title">Christmas After Brexit</div>
+                    <div class="author">Michael Askew</div>
+                </div>
+            </a>
+            <a href="/againstsilence">
+                <div class="menuitem againstsilence">
+                    <div class="title">AGAINST SILENCE</div>
+                    <div class="author">Fern Broome Richards</div>
+                </div>
+            </a>
+            <a href="/leftalone">
+                <div class="menuitem leftalone">
+                    <div class="title">Left Alone</div>
+                    <div class="author">Jake Reynolds</div>
+                </div>
+            </a>
+            <a href="/thenightingalesnest">
+                <div class="menuitem thenightingalesnest">
+                    <div class="title">The Nightingales Nest</div>
+                    <div class="author">Richard Lambert</div>
+                </div>
+            </a>
+            <a href="/thelaughofeliza">
+                <div class="menuitem thelaughofeliza">
+                    <div class="title">The Laugh of Eliza</div>
+                    <div class="author">Leah Foster</div>
+                </div>
+            </a>
+            <a href="/livingoutsidetheframe">
+                <div class="menuitem livingoutsidetheframe">
+                    <div class="title">Living Outside the Frame</div>
+                    <div class="author">Lewis Buxton</div>
+                </div>
+            </a>
+            <a href="/ahopeonthewall">
+                <div class="menuitem ahopeonthewall">
+                    <div class="title">A Hope on the Wall</div>
+                    <div class="author">Anna Metcalfe</div>
+                </div>
+            </a>
+            <a href="/postcardsfromberlin">
+                <div class="menuitem postcardsfromberlin">
+                    <div class="title">Postcards From Berlin</div>
+                    <div class="author">Bec Miles</div>
+                </div>
+            </a>
+            <a href="/thejudepoems">
+                <div class="menuitem thejudepoems">
+                    <div class="title">THE JUDE POEMS</div>
+                    <div class="author">Matthew Halliday</div>
+                </div>
+            </a>
+            <a href="/anenglishtowelshdictionaryoffeministterms">
+                <div class="menuitem anenglishtowelshdictionaryoffeministterms">
+                    <div class="title">An English to Welsh Dictionary of Feminist Terms</div>
+                    <div class="author">Sarah Hudis</div>
+                </div>
+            </a>
+            <a href="/thumbsinspace">
+                <div class="menuitem thumbsinspace">
+                    <div class="title">Thumbs in Space</div>
+                    <div class="author">Seabright D. Mortimer</div>
+                </div>
+            </a>
+            <a href="/kafkaesque">
+                <div class="menuitem kafkaesque">
+                    <div class="title">Kafkaesque</div>
+                    <div class="author">Harry Denniston</div>
+                </div>
+            </a>
+            <a href="/reflector">
+                <div class="menuitem reflector">
+                    <div class="title">REFLECTOR</div>
+                    <div class="author">Nina Ines Ward</div>
+                </div>
+            </a>
+            <a href="/deadoneiricmonsters">
+                <div class="menuitem deadoneiricmonsters">
+                    <div class="title">DEAD ONEIRIC MONSTERS</div>
+                    <div class="author">Scott Mason</div>
+                </div>
+            </a>
+            <a href="/byluckoftheharbour">
+                <div class="menuitem byluckoftheharbour">
+                    <div class="title">]by lUck oF the haRbour</div>
+                    <div class="author">Ali Graham</div>
+                </div>
+            </a>
         </div>
     </div>
+    <script>
+        $(".menuscroller").scroll(function() {
+            var titleOpacity = ($(".menuscroller").scrollTop() / $(window).height()) * 5;
+            $(".logocover").css('opacity', titleOpacity);
+        });
+    </script>
 </body>
